# TRINITY

./: .gitignore  CLAUDE.md  README.md  package-lock.json
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  memory.py
backend/app/core/: gemini_provider.py  tool_router.py
backend/app/tasks/: tool_tasks.py
backend/personalities/: aria.yaml  echo.yaml  nexus.yaml
desktop_app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
desktop_app/src/: App.tsx  index.css
desktop_app/src-tauri/: Cargo.toml  tauri.conf.json
desktop_app/src-tauri/resources/personalities/: nexus.yaml
desktop_app/src-tauri/src/: main.rs
desktop_app/src-tauri/src/commands/: chat.rs  config.rs  conversations.rs  memory.rs  mod.rs  ollama.rs  personality.rs  provider.rs
desktop_app/src-tauri/src/db/: mod.rs
desktop_app/src-tauri/src/providers/: gemini.rs  mod.rs  ollama.rs
desktop_app/src/tauri/: bridge.ts  storage.ts
docs/: API_CONTRACT.md  FUTURE_CHANGES.md  PHASE2_DESKTOP_APP.md  TRINITY_BUILD_GUIDE.md  TRINITY_CLAUDE_CODE_PROMPT.md  TRINITY_WBS_Structure.pptx  stress_test.docx
frontend/: index.html  vite.config.ts
frontend/src/api/: client.ts
frontend/src/hooks/: useVoice.ts
frontend/src/store/: useAuthStore.ts
site/: index.html  package-lock.json  package.json  tailwind.config.cjs
site/src/: App.tsx  index.css
site/src/components/: AnimatedText.tsx  BarPreloader.tsx  CursorGlow.tsx  (+6 more)
web_app/backend/: celery_worker.py
web_app/frontend/: package-lock.json  package.json
(+30 files in other folders)
